z-index fixed

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ div img{
 .info{
     padding: 5em 10em;
     color: white;
+    z-index: 9999;
 }
 .info p{
     font-size: 1.5em;
